Fix alignments issue on section

--- a/src/styles/app.scss
+++ b/src/styles/app.scss
@@ -6,8 +6,8 @@
   box-shadow: 0px 6px 20px rgba(44, 186, 231, 0.3);
 }
 
-.body-text {
-  &>p {
+.section-content {
+  &>p:first-child {
     margin: 0;
   }
 }
